
1.5
===
- Fixed bug in .sh files in the bin folder. $@ did not work with inputs that
  contained spaces and had to be substituted by "$@"

1.4.1
=======
- Fixed bug in EncryptedPasswordC3P0ConnectionProvider which made decryption
  of datasource configuration not to work properly.

1.4
=======
- Added methods to Simple* and Environment* config classes for both Digesters 
  and PBEEncryptors to allow them to be configured entirely with Strings.
- Added to org.jasypt.encryption.pbe.StandardPBEByteEncryptor a workaround
  for Sun JCE's bug 4953555 (http://bugs.sun.com/view_bug.do?bug_id=4953555)   
- Added org.jasypt.properties.EncryptableProperties as a java.util.Properties
  which allows transparent decryption of encrypted property values.
- Moved org.jasypt.hibernate.ParameterNaming to 
  org.jasypt.hibernate.type.ParameterNaming.
- Added org.jasypt.hibernate.connectionprovider.EncryptedPasswordDriverManagerConnectionProvider
  and org.jasypt.hibernate.connectionprovider.EncryptedPasswordC3P0ConnectionProvider
  for allowing encrypted datasource parameters in hibernate.cfg.xml 
  files.
- Added org.jasypt.spring.properties.EncryptablePropertyPlaceholderConfigurer
  and org.jasypt.spring.properties.EncryptablePropertyOverrideConfigurer
  to allow use of encrypted .properties files from within Spring applications
  in a transparent manner.
- Package org.jasypt.springsecurity renamed as org.jasypt.spring.security, and
  deprecated classes in the old package (will be removed in 1.5).
- Added org.jasypt.salt.ZeroSaltGenerator for creating salts filled with
  "zero" bytes.
- Added org.jasypt.intf.service.JasyptStatelessService for supporting CLI
  operation and development of stateless services (like web services) for
  Jasypt.
- Added org.jasypt.intf.cli.JasyptStringDigestCLI, 
  org.jasypt.intf.cli.JasyptPBEStringEncryptionCLI and 
  org.jasypt.intf.cli.JasyptPBEStringDecryptionCLI to allow the execution of