@@ -21,16 +21,17 @@ Integrating Jasypt with Seam 2 (Mini-Howto)
 ----------
     <!-- Jasypt and dependencies -->
     <module>
-        <java>jasypt-1.3.jar</java>
-    </module>
-    <module>
-        <java>icu4j-3.4.4.jar</java>
+        <java>jasypt-1.5.jar</java>
     </module>
     <module>
         <java>commons-lang-2.1.jar</java>
     </module>
     <module>
         <java>commons-codec-1.1.jar</java>
+    </module>
+    <!-- ICU4J not needed if you are using Java 6 or higher -->
+    <module>
+        <java>icu4j-3.4.4.jar</java>
     </module>
 ----------
 
